<resources>
    <string name="app_name">Simulador de Prova Enem</string>
    <string name="questao0"><p>Um asteroide de cerca de um mil metros de diâmetro, viajando
        a 288 mil quilômetros por hora, passou a uma distância insignificante — em termos cósmicos —
        da Terra, pouco mais do dobro da distância que nos separa da Lua. Segundo os cálculos
        matemáticos, o asteroide crozou a órbita da Terra e somente não colidiu porque ela não estava
        naquele ponto de interseção. Se ele tivesse sido capturado pelo campo gravitacional do nosso
        planeta e colidido, o impacto equivaleria a 40 bilhões de toneladas de TNT, ou o equivalente
        à explosão de 40 mil bombas de hidrogênio, conforme calcularam os computadores operados pelos
        astrônomos do programa de Exploração do Sistema Solar da Nasa; se caísse no continente,
        abriria uma cratera de cinco quilômetros, no mínimo, e destruiria tudo o que houvesse num
        raio de milhares de outros; se desabasse no oceano, provocaria maremotos que devastariam
        imensas regiões costeiras. Enfim, uma visão do Apocalipse.</p><br/>\n\n
        Qual estratégia caracteriza o texto como uma noticía alarmante?</string>
    <string name="questao0A">A) A descrição da velocidade do asteroide.</string>
    <string name="questao0B">B) A recorrência de formulações hipotéticas.</string>
    <string name="questao0C">C) A referência à opnião dos astrônomos.</string>
    <string name="questao0D">D) A utilização da locução adverbial "no mínimo".</string>
    <string name="questao0E">E) A comparação com a distância da Lua à Terra.</string>
    <string name="questao1">A draga\n<br/>\n<br/>A gente não sabia se aquela draga tinha
        nascido ali, no Porto, como um pé de árvore ou uma duna.\n<br/>
        — E que fosse uma casa de peixes?\n<br/>
        Meia dúzia de loucos e bêbados moravam dentro dela, enraizados em suas ferragens.\n<br/>
        Dos viventes da draga era um o meu amigo Mário-pega-sapo.\n<br/>
        [...]\n<br/>
        Quando Mário morreu, um literato oficial, em necrológio caprichado, chamou-o de Mário-Captura-Sapo! Ai que dor!\n<br/>
        Ao literato cujo fazia-lhe nojo a forma coloquial.\n<br/>
        Queria captura em vez de pega para não macular (sic) a língua nacional lá dele...\n<br/>
        [...]\n<br/>
        Da velha draga\n<br/>
        Abrigo de vagabundos e de bêbados, restaram as expressões: estar na draga,
        viver na draga por estar sem dinheiro, viver na miséria\n<br/>
        Que ora ofereço ao filólogo Aurélio Buarque de Hollanda\n<br/>
        Para que as registre em seus léxicos\n<br/>
        Pois que o povo já as registrou.\n<br/>\n<br/>
        Ao criticar o preciosismo linguístico do literato e ao sugerir
        a dicionarização de expressões locais, o poeta expressa uma concepção de língua que
    </string>
    <string name="questao1A">A) contrapõe características da escrita e da fala.</string>
    <string name="questao1B">B) ironiza a comunicação fora da norma-padrão.</string>
    <string name="questao1C">C) substitui regionalismos por registros formais.</string>
    <string name="questao1D">D) valoriza o uso de variedades populares..</string>
    <string name="questao1E">E) defende novas regras gramaticais.</string>
    <string name="questao2">O documentário O menino que fez um museu, direção de Sérgio Utsch, produção independente de brasileiros e britânicos, gravado no Nordeste em 2016, mais precisamente no distrito Dom Quintino, zona rural do Crato, foi premiado em Londres, pela Foreign Press Association (FPA), a associação de correspondentes estrangeiros mais antiga do mundo, fundada em 1888.\n<br/>\n<br/>
            De acordo com o diretor, O menino que fez um museu foi o único trabalho produzido por equipes fora do eixo Estados Unidos-Europa entre os finalistas. O documentário conta a história de um Brasil profundo, desconhecido até mesmo por muitos brasileiros. É apresentado com o carisma de Pedro Lucas Feitosa, 11 anos.\n<br/>\n<br/>
            Quando tinha 10 anos, Pedro Lucas criou o Museu de Luiz Gonzaga, que fica no distrito de Dom Quintino. A ideia surgiu após uma visita que o garoto fez, em 2013, quando tinha 8 anos, ao Museu do Gonzagão, em Exu, Pernambuco. Pedro decidiu criar o próprio lugar de exposição para homenagear o rei e o local escolhido foi a casa da sua bisavó já falecida, que fica ao lado da casa dele, na rua Alto de Antena.\n<br/>\n<br/>
            No segundo parágrafo, uma citação afirma que o documentário “foi o único trabalho produzido por equipes fora do eixo Estados Unidos-Europa entre os finalistas”. No texto, esse recurso expressa uma estratégia argumentativa que reforça a</string>
    <string name="questao2A">A) originalidade da iniciativa de homenagem à vida e à obra de Luiz Gonzaga.</string>
    <string name="questao2B">B) falta de concorrentes ao prêmio de uma das associações mais antigas do mundo.</string>
    <string name="questao2C">C) proeza da premiação de uma história ambientada no interior do Nordeste brasileiro.</string>
    <string name="questao2D">D) escassez de investimentos para a produção cinematográfica independente no país.</string>
    <string name="questao2E">E) importância da parceria entre brasileiros e britânicos para a realização das filmagens.</string>
    <string name="questao3">A volta do marido pródigo\n<br/>\n<br/>
            — Bom dia, seu Marrinha! Como passou de ontem?\n<br/>
            — Bem. Já sabe, não é? Só ganha meio dia. [...]\n<br/>
            Lá além, Generoso cotuca Tercino:\n<br/>
            — [...] Vai em festa, dorme que-horas, e, quando chega, ainda é todo enfeitado e salamistrão!...\n<br/>
            — Que é que hei de fazer, seu Marrinha... Amanheci com uma nevralgia... Fiquei com cisma de apanhar friagem...\n<br/>
            — Hum...\n<br/>
            — Mas o senhor vai ver como eu toco o meu serviço e ainda faço este povo trabalhar...\n<br/>
            Pintão suou para desprender um pedrouço, e teve de pular para trás, para que a laje lhe não esmagasse um pé. Pragueja:\n<br/>
            — Quem não tem brio engorda!\n<br/>
            — É... Esse sujeito só é isso, e mais isso... — opina Sidu.\n<br/>
            — Também, tudo p\'ra ele sai bom, e no fim dá certo... — diz Correia, suspirando e retomando o enxadão. — “P\'ra uns, as vacas morrem ... p\'ra outros até boi pega a parir...”\n<br/>
            Seu Marra já concordou:\n<br/>
            — Está bem, seu Laio, por hoje, como foi por doença, eu aponto o dia todo. Que é a última vez!... E agora, deixa de conversa fiada e vai pegando a ferramenta!\n<br/>\n<br/>
            Esse texto tem importância singular como patrimônio linguístico para a preservação da cultura nacional devido
    </string>
    <string name="questao3A">A) à menção a enfermidades que indicam falta de cuidado pessoal.</string>
    <string name="questao3B">B) à referência a profissões já extintas que caracterizam a vida no campo.</string>
    <string name="questao3C">C) aos nomes de personagens que acentuam aspectos de sua personalidade.</string>
    <string name="questao3D">D) ao emprego de ditados populares que resgatam memórias e saberes coletivos.</string>
    <string name="questao3E">E) às descrições de costumes regionais desmistificam crenças e superstições.</string>
    <string name="questao4">Intenso e original, Son of Saul retrata horror do holocausto\n\n<br/><br/>
            Centenas de filmes sobre o holocausto já foram produzidos em diversos países do mundo, mas nenhum é tão intenso como o húngaro Son of Saul, do estreante em longa-metragens László Nemes, vencedor do Grande Prêmio do Júri no último Festival de Cannes.\n<br/>\n<br/>
            Ao contrário da grande maioria das produções do gênero, que costuma oferecer uma variedade de informações didáticas e não raro cruza diferentes pontos de vista sobre o horror do campo de concentração, o filme acompanha apenas um personagem.\n<br/>\n<br/>
            Ele é Saul (Géza Rôhrig), um dos encarregados de conduzir as execuções de judeus como ele que, por um dia e meio, luta obsessivamente para que um menino já morto — que pode ou não ser seu filho — tenha um enterro digno e não seja simplesmente incinerado.\n<br/>\n<br/>
            O acompanhamento da jornada desse prisioneiro é no sentido mais literal que o cinema pode proporcionar: a câmera está o tempo todo com o personagem, seja por sobre seus ombros, seja com um close em primeiro plano ou em sua visão subjetiva. O que se passa ao seu redor é secundário, muitas vezes desfocado.\n<br/>\n<br/>
            Saul percorre diferentes divisões de Auschwitz à procura de um rabino que possa conduzir o enterro da criança, e por isso pouco se envolve nos planos de fuga que os companheiros tramam e, quando o faz, geralmente atrapalha. “Você abandonou os vivos para cuidar de um morto”, acusa um deles.\n<br/>\n<br/>
            Ver toda essa via crucis é por vezes duro e exige certa entrega do espectador, mas certamente é daquelas experiências cinematográficas que permanecem na cabeça por muito tempo.\n<br/>\n<br/>
            O longa já está sendo apontado como o grande favorito ao Oscar de filme estrangeiro. Se levar a estatueta, certamente não faltará quem diga que a Academia tem uma preferência por quem aborda a 2º Guerra. Por mais que exista uma dose de verdade na afirmação, premiar uma abordagem tão ousada e radical como Son of Saul não deixaria de ser um passo à frente dos votantes.\n<br/>\n<br/>
            A resenha é, normalmente, um texto de base argumentativa. Na resenha do filme Son of Saul, o trecho da sequência argumentativa que se constitui como opinião implícita é
    </string>
    <string name="questao4A">A) “[...] do estreante em longa-metragens Lászió Nemes, vencedor do Grande Prêmio do Júri no último Festival de Cannes”.</string>
    <string name="questao4B">B) “Ele é Saul (Géza Róhrig), um dos encarregados de conduzir as execuções de judeus [...]”.</string>
    <string name="questao4C">C) “[...]a câmera está o tempo todo com o personagem, seja por sobre seus ombros, seja com um close [...]”.</string>
    <string name="questao4D">D) “Saul percorre diferentes divisões de Auschwitz à procura de um rabino que possa conduzir o enterro da criança [...]”.</string>
    <string name="questao4E">E) “[...] premiar uma abordagem tão ousada e radical como Son of Saul não deixaria de ser um passo à frente dos votantes”.</string>
    <string name="questao5">Sinhá\n\n<br/><br/>
            Se a dona se banhoun<br/>
            Eu não estava lá\n<br/>
            Por Deus Nosso Senhor\n<br/>
            Eu não olhei Sinhá\n<br/>
            Estava lá na roça\n<br/>
            Sou de olhar ninguém\n<br/>
            Não tenho mais cobiça\n<br/>
            Nem enxergo bem\n\n<br/><br/>
            Para que me pôr no tronco\n<br/>
            Para que me aleijar\n<br/>
            Eu juro a vosmecê\n<br/>
            Que nunca vi Sinhá\n<br/>
            [...]\n<br/>
            Por que talhar meu corpo\n<br/>
            Eu não olhei Sinhá\n<br/>
            Para que que vosmincê\n<br/>
            Meus olhos vai furar\n<br/>
            Eu choro em iorubá\n<br/>
            Mas oro por Jesus\n<br/>
            Para que que vassuncê\n<br/>
            Me tira a luz.\n<br/>\n<br/>
            No fragmento da letra da canção, o vocabulário empregado e a situação retratada são relevantes para o patrimônio linguístico e identitário do país, na medida em que
    </string>
    <string name="questao5A">A) remetem à violência física e simbólica contra os povos escravizados.</string>
    <string name="questao5B">B) valorizam as influências da cultura africana sobre a música nacional.</string>
    <string name="questao5C">C) relativizam o sincretismo constitutivo das práticas religiosas brasileiras.</string>
</resources>