<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#add8e6"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/titulo"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Questão 01"
                android:textSize="10pt"
                android:textColor="#000000"
                android:textStyle="bold"/>
        </LinearLayout>

            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/texto"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="8pt"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/opcaoA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questao0A"
            android:onClick="opcaoA"
            android:backgroundTint="#0AA7C8"/>

        <Button
            android:id="@+id/opcaoB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questao0B"
            android:backgroundTint="#0AA7C8"
            android:onClick="opcaoB"/>

        <Button
            android:id="@+id/opcaoC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questao0C"
            android:backgroundTint="#0AA7C8"
            android:onClick="opcaoC"/>

        <Button
            android:id="@+id/opcaoD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questao0D"
            android:backgroundTint="#0AA7C8"
            android:onClick="opcaoD"/>

        <Button
            android:id="@+id/opcaoE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questao0E"
            android:backgroundTint="#0AA7C8"
            android:onClick="opcaoE"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/proximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Proximo"
            android:onClick="proximo"
            android:layout_marginBottom="30dp"
            android:textSize="10pt"/>

    </LinearLayout>
</ScrollView>